2012-04-29  Kirit Saelensminde  <kirit@felspar.com>
 The conversion of types to JSON no longer takes a request as the first parameter. This allows objects to be converted without having to do it within the context of a request.
 Added JSON handler for the server side of the field type NullBooleanField.
 Fixed a bug where the user agent would sign the wrong POST data.
 The update operation no longer returns a redirect.
 Many to many fields now appear in the data arrays section of the instance fields rather than with the other fields.
 The user agent POST requester can now be provided with a list of status codes that it will accept as successful and if it cannot parse the JSON body it will return an empty dict.

2012-04-18  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a problem where forwarded authentication could lead to an infinite recursion error.

2012-04-13  Kirit Saelensminde  <kirit@felspar.com>
 Try to be much stricter about which applications get which models. This fixes a problem where models were associated with applications that made use of them, rather than just the one that defined them.

2012-04-05  Kirit Saelensminde  <kirit@felspar.com>
 The authentication forwarding backend is now properly compatible with the real Fost authn request signing.
 The type of the user_id that we see is important as it tells us what we need to look it up with.

2012-04-02  Kirit Saelensminde  <kirit@felspar.com>
 Requests are now signed when going back to another service.
 Added a Realm to the WWW-Authentication header.
 Added django-fost-authn to the setup.py requirements.

2012-03-30  Kirit Saelensminde  <kirit@felspar.com>
 Client side proxies are now loaded via the new SLUMBER_CLIENT_APPS setting.

2012-03-28  Kirit Saelensminde  <kirit@felspar.com>
 Permissions are now checked on several of the default operations.

2012-03-27  Kirit Saelensminde  <kirit@felspar.com>